# drafty

./: .gitignore  LICENSE  README.md  requirements.txt  test_backend.py
ai/: __init__.py  cad_agent.py  drawing_agent.py  orchestrator.py  vision_agent.py
ai/draftycrew/: README.md  generated_cad_script.scad  pyproject.toml
ai/draftycrew/knowledge/: README.md  openscad_best_practices.txt  openscad_common_patterns.txt
ai/draftycrew/src/draftycrew/: crew.py  main.py
ai/draftycrew/src/draftycrew/config/: agents.yaml  tasks.yaml
ai/draftycrew/src/draftycrew/tools/: __init__.py  openscad_knowledge_tool.py  openscad_validator.py
backend/: __init__.py  main.py  requirements.txt  run.py
frontend/: README_OPENJSCAD.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CADScriptViewer.jsx  CADViewer.jsx  ErrorAlert.jsx  FileUpload.jsx  Footer.jsx  Header.jsx  LoadingSpinner.jsx  ProcessSteps.jsx  ResultCard.jsx
frontend/src/pages/: GeneratePage.jsx  LandingPage.jsx
