[project]
name = "draftycrew"
version = "0.1.0"
description = "draftycrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
draftycrew = "draftycrew.main:run"
run_crew = "draftycrew.main:run"
train = "draftycrew.main:train"
replay = "draftycrew.main:replay"
test = "draftycrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
